support/k8s/k8s-workload-registrar/mode-crd/config/webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: k8s-workload-registrar
webhooks:
- name: k8s-workload-registrar.spire.svc
  clientConfig:
    caBundle: <INSERT BASE64 CA BUNDLE HERE>
    service:
      name: k8s-workload-registrar
      namespace: spire
      path: "/validate-spiffeid-spiffe-io-v1beta1-spiffeid"
  rules:
  - apiGroups:
    - spiffeid.spiffe.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - spiffeids
    scope: Namespaced
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-workload-registrar
  namespace: spire
spec:
  ports:
  - name: webhook
    protocol: TCP
    port: 443
    targetPort: 9443
  selector:
    app: spire-server
